added skills content

--- a/index.html
+++ b/index.html
@@ -56,31 +56,40 @@
 </section>
 <!-- what i do -->
 <section class="what-i-do">
-    <h3 class="section-title">what I Do</h3>
+    <h3 class="section-title">What I Do</h3>
     <!-- .skills-container>.skill*4>img+p.skill-title+p.skill-description>lorem15 -->
     <div class="skills-container">
         <div class="skill">
-            <img src="" alt="">
-            <p class="skill-title"></p>
+            <img src="images/icons/js.png" alt="">
+            <p class="skill-title">Vanilla Javascript</p>
             <p class="skill-description">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nemo consequuntur odio suscipit dolore, autem quos.</p>
         </div>
         <div class="skill">
-            <img src="" alt="">
-            <p class="skill-title"></p>
+            <img src="images/icons/react.png" alt="">
+            <p class="skill-title">React</p>
             <p class="skill-description">Nisi harum tempore nulla similique vitae eum enim minus architecto perferendis saepe. Fugiat, fugit veritatis.</p>
         </div>
         <div class="skill">
-            <img src="" alt="">
-            <p class="skill-title"></p>
+            <img src="images/icons/nodejs.png" alt="">
+            <p class="skill-title">Node JS</p>
             <p class="skill-description">Reprehenderit architecto, veniam distinctio fugiat optio quia facilis eveniet labore eaque iusto asperiores, nemo sit?</p>
         </div>
         <div class="skill">
-            <img src="" alt="">
-            <p class="skill-title"></p>
+            <img src="images/icons/mongo.png" alt="">
+            <p class="skill-title">Mongodb</p>
             <p class="skill-description">Amet saepe labore dignissimos quisquam tempora libero molestias sed itaque, maxime vero magnam quasi eius.</p>
         </div>
     </div>
 </section>
+    <!-- resume section -->
+    <section class="resume">
+        <h3 class="section-title">A summary of My Resume</h3>
+        <div class="resume-content">
+            <div>
+                
+            </div>
+        </div>
+    </section>
     </main>
     <footer>
 
